force-app/main/default/objects/ST_Opportunity_Snapshot__c/ST_Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <label>商談_スナップショット_ST</label>
    <nameField>
        <displayFormat>STO-{0000000000}</displayFormat>
        <label>商談_スナップショット_ST</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>