force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>取引先ID(18桁)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>