force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>取引先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>