force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/modelpattern__c.field-meta.xml
<CustomField>
    <fullName>modelpattern__c</fullName>
    <label>組合わせモデルパターン</label>
    <length>255</length>
    <type>Text</type>
</CustomField>