force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/NumberofrecordsGoal__c.field-meta.xml
<CustomField>
    <fullName>NumberofrecordsGoal__c</fullName>
    <label>目標レコード件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>