force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/OppCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OppCreatedDate__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談作成日</label>
    <type>Date</type>
</CustomField>