force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>商談_スナップショット_ST</relationshipLabel>
    <relationshipName>STOpportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>