force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/OpportunityId18__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId18__c</fullName>
    <label>商談ID(18桁)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>