force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>OpportunityName__c</fullName>
    <label>商談名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>