force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_focustype_kouji__c.field-meta.xml
<CustomField>
    <fullName>ST_focustype_kouji__c</fullName>
    <label>重点フラグ_工事</label>
    <length>255</length>
    <type>Text</type>
</CustomField>