force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_focustype_kouji_im__c.field-meta.xml
<CustomField>
    <fullName>ST_focustype_kouji_im__c</fullName>
    <formula>IF (
OR(
OR( (ST_focustype_kouji__c = &apos;積極拡大&apos;)
,(ST_focustype_kouji__c = &apos;重要な維持①&apos;))
,OR( (ST_focustype_boukoubu__c= &apos;積極拡大&apos;)
,(ST_focustype_boukoubu__c = &apos;重要な維持①&apos;))
)
,true
,false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>重点フラグ_工事_重要対象</label>
    <type>Checkbox</type>
</CustomField>