force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_initialContractAmount__c.field-meta.xml
<CustomField>
    <fullName>ST_initialContractAmount__c</fullName>
    <label>当初請負金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>