force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_initialContractAmountGoal__c.field-meta.xml
<CustomField>
    <fullName>ST_initialContractAmountGoal__c</fullName>
    <label>目標請負金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>