force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_suryou_goal__c.field-meta.xml
<CustomField>
    <fullName>ST_suryou_goal__c</fullName>
    <label>目標数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>