force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/ST_yosankumikomi__c.field-meta.xml
<CustomField>
    <fullName>ST_yosankumikomi__c</fullName>
    <label>予算組み込み</label>
    <length>255</length>
    <type>Text</type>
</CustomField>