force-app/main/default/objects/ST_Opportunity_Snapshot__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Phase</valueSetName>
    </valueSet>
</CustomField>